Add: experienceImages attribute in ExperienceEntity